Fix layout bug
The bottom of .your-projects now lines up with the bottom of .sidebar

--- a/css/index.css
+++ b/css/index.css
@@ -102,7 +102,6 @@ header img {
 main {
     box-sizing: border-box;
     padding: 32px;
-    height: auto;
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -112,6 +111,8 @@ main {
     gap: 10px;
 
     background-color: var(--primary-color);
+
+    --section-title-size: 1.5rem;
 }
 
 article {
@@ -120,7 +121,7 @@ article {
 }
 
 section h3 {
-    height: 20px;
+    font-size: var(--section-title-size);
     margin: 10px 0;
 }
 
@@ -166,9 +167,8 @@ section h3 {
     grid-area: projects;
 }
 
-.your-projects > div {
-    height: calc(100% - 60px);
-
+.your-projects .content {
+    height: calc(100% - var(--section-title-size) - var(--section-title-size));
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr;
@@ -180,7 +180,6 @@ section h3 {
 }
 
 .side-content {
-    height: calc(100% - 1rem);
 
     h4 {
         margin: 0 0 5px 0;
@@ -189,7 +188,7 @@ section h3 {
     .content {
         padding: 2rem 1rem;
         box-sizing: border-box;
-        height: 90%;
+        height: calc(100% - var(--section-title-size) - var(--section-title-size));
 
         background-color: var(--tertiary-color);
     }
